Adds a custom Moshi JsonAdapter to properly handle Long values
*THIS IS NOT PRODUCTION READY AND SOME REFACTORING MAY BE NECESSARY. DO
NOT MERGE*